# simple_extractous_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  processor.rs
