[package]
name = "simple_extractous_api"
version = "0.1.1"
edition = "2021"

[dependencies]
extractous = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
actix-multipart = "0.7.2"
futures-util = "0.3.31"
thiserror = "2.0.12"
serde_json = "1.0.140"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
# Health checks and monitoring
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Testing
reqwest = { version = "0.12", features = ["json", "multipart"], optional = true }
actix-cors = "0.7.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
test-utils = ["reqwest"]
